# tilefeed

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
Formula/: tilefeed.rb
bucket/: tilefeed.json
docs/: configuration.md  serving.md
examples/custom-command/: config.toml
examples/gdal-generation/: config.toml
examples/local-parks/: README.md  config.toml
examples/mapbox-publish/: config.toml
examples/multi-source/: config.toml
examples/ogr-fdw/: README.md  config.toml  setup.sql
examples/s3-publish/: config.toml
examples/serve-with-simplification/: README.md  config.toml  setup.sql
examples/webhook-sse/: config.toml  demo.rs  map.html
packaging/aur/: PKGBUILD
packaging/chocolatey/: postile.nuspec  tilefeed.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/winget/: muimsd.postile.yaml  muimsd.tilefeed.yaml
src/: config.rs  diff.rs  events.rs  generator.rs  inspect.rs  main.rs  mbtiles.rs  mvt.rs  postgis.rs  server.rs  storage.rs  tiles.rs  updater.rs  validate.rs  webhook.rs
tests/integration/: config.toml  run.sh  setup.sql
