[package]
name = "postile"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# PostgreSQL (async, with LISTEN/NOTIFY support)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-geo-types-0_7"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive"] }

# SQLite for MBTiles
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Geometry types
geo-types = "0.7"
geo = "0.28"

# MVT (Mapbox Vector Tile) encoding
prost = "0.13"
prost-types = "0.13"
flate2 = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# In-memory LRU tile cache
lru = "0.12"

[build-dependencies]
prost-build = "0.13"
