[package]
name = "tilefeed"
version = "0.3.0"
edition = "2021"
description = "PostGIS vector tile pipeline with incremental MBTiles updates via LISTEN/NOTIFY"
license = "MIT"
repository = "https://github.com/muimsd/tilefeed"
keywords = ["postgis", "vector-tiles", "mbtiles", "tippecanoe", "gis"]
categories = ["command-line-utilities", "database"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL (async, with LISTEN/NOTIFY support)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-geo-types-0_7"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive"] }

# SQLite for MBTiles
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Geometry types
geo-types = "0.7"
geo = "0.28"

# MVT (Mapbox Vector Tile) encoding
prost = "0.13"
prost-types = "0.13"
flate2 = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Async utilities
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

[package.metadata.deb]
maintainer = "muimsd"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/tilefeed", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tilefeed/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tilefeed", dest = "/usr/bin/tilefeed", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/tilefeed/README.md", mode = "0644" },
]

[build-dependencies]
prost-build = "0.13"
